<resources>
    <string name="app_name">SmartMap</string>
    <string name="action_add">添加</string>


    <string name="hint_username"> 请输入用户名</string>
    <string name="hint_projectname"> 请输入项目名称</string>
    <string name="hint_miaoshu"> 描述</string>
    <string name="hint_pass"> 请输入用户名密码</string>
    <string name="hint_passagin"> 请再次输入用户名密码</string>
    <string name="login_btn">登录</string>
    <string name="login_ok">确定</string>
    <string name="login_quxiao">取消</string>
    <string name="Registered_btn"> 若无帐号，请注册</string>
    <string name="selectgroup">请选择小组</string>

    <string name="login">若有帐号，请直接登录</string>
    <string name="Registered">注册</string>


    <string-array name="testArray">
        <item>hello java</item>
        <item>hello android</item>
        <item>hello recycler view</item>
        <item>hello card view</item>
        <item>hello java</item>
        <item>hello android</item>
        <item>hello recycler view</item>
        <item>hello card view</item>
        <item>hello java</item>
        <item>hello android</item>
        <item>hello recycler view</item>
        <item>hello card view</item>
    </string-array>


</resources>
