<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin"
    >
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/et_projectname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_projectname" />

    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textInputLayout"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_projectmiashu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_miaoshu" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_OK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textInputLayout2"
        android:layout_margin="30dp"
        android:text="@string/login_ok"
        style="@style/btn_style"/>

    <Button
        android:id="@+id/btn_quxiao"
        style="@style/btn_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_OK"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login_quxiao" />

</RelativeLayout>
